0032565: Foundation Classes, OSD_FileSystem - expose interface for registering global protocols

Added methods OSD_FileSystem::AddDefaultProtocol()/::RemoveDefaultProtocol()
and fixed misleading description of OSD_FileSystemSelector::AddProtocol().